align fix

--- a/wp-content/themes/wp-rock/src/scss/acf-blocks/block-our-team.scss
+++ b/wp-content/themes/wp-rock/src/scss/acf-blocks/block-our-team.scss
@@ -183,8 +183,9 @@
                 max-height: 1500px;
                 margin-top: 16px;
                 padding: 0 24px 80px;
-
-                @media screen and (max-width: 570px) {
+    
+                @media screen and (max-width: 680px) {
+                    text-align: left;
                     padding: 0 16px 8px;
                     font-size: 10px;
                     margin-top: 8px;
